--- a/src/scss/order.scss
+++ b/src/scss/order.scss
@@ -130,6 +130,7 @@
     width: 100%;
     height: 100%;
     background: #fff;
+    border-radius: 2px;
   }
 
   &:has(input:checked)::after {
@@ -175,6 +176,8 @@
 .order-radiobox {
   display: flex;
   gap: 12px;
+  min-height: 36px;
+  padding: 0;
   align-items: center;
   cursor: pointer;
 }
@@ -197,10 +200,18 @@
   }
 }
 
+.order-radiobox__price {
+  font-weight: 500;
+  position: relative;
+  &:has(.order-radiobox__price-value:empty) {
+    display: none;
+  }
+}
+
 .order-radiobox__control {
   position: relative;
-  width: 24px;
-  height: 24px;
+  width: 28px;
+  height: 28px;
   flex-shrink: 0;
   box-sizing: border-box;
   border-radius: 50%;
@@ -250,7 +261,8 @@
   font-size: 16px;
   color: #656565;
   display: block;
-  line-height: 1.15;
+  line-height: 18px;
+  text-wrap: balance;
   span {
     font-style: italic;
     color: #bababa;
@@ -348,17 +360,17 @@ textarea.order-textfield__control {
 
 .order-country__title {
   font-size: 18px;
-  margin-bottom: 24px;
+  margin-bottom: 16px;
   line-height: 24px;
   text-transform: uppercase;
   color: #000000;
   font-weight: 700;
-  text-align: center;
+  // text-align: center;
 }
 
 .order-country__controls {
   display: flex;
-  justify-content: center;
+  // justify-content: center;
   align-items: center;
   gap: 64px;
 }
@@ -370,6 +382,7 @@ textarea.order-textfield__control {
   cursor: pointer;
   border: none;
   padding: 0;
+  min-height: 36px;
   background: transparent;
 
   &[data-status='active'] .order-country__control-radio::before {
@@ -379,8 +392,8 @@ textarea.order-textfield__control {
 
 .order-country__control-radio {
   position: relative;
-  width: 24px;
-  height: 24px;
+  width: 28px;
+  height: 28px;
   flex-shrink: 0;
   box-sizing: border-box;
   border-radius: 50%;
@@ -405,5 +418,6 @@ textarea.order-textfield__control {
   font-size: 18px;
   color: #656565;
   display: block;
-  line-height: 1.15;
+  line-height: 18px;
+  text-wrap: balance;
 }
