--- a/src/scss/order.scss
+++ b/src/scss/order.scss
@@ -1,3 +1,58 @@
+.order-layout {
+  display: flex;
+  gap: 64px;
+  margin-bottom: 96px;
+
+  @include --max-xl {
+    gap: 48px;
+  }
+  @include --max-lg {
+    gap: 36px;
+  }
+  @include --max-md {
+    flex-wrap: wrap;
+    gap: 16px;
+  }
+}
+
+.order-layout__main {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 36px;
+
+  @include --max-md {
+    gap: 24px;
+  }
+}
+
+.order-layout__side {
+  width: 320px;
+  flex-shrink: 0;
+
+  @include --max-xl {
+    width: 280px;
+  }
+  @include --max-lg {
+    width: 264px;
+  }
+  @include --max-md {
+    width: 100%;
+  }
+}
+
+.order-side {
+  position: sticky;
+  top: 81px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+
+  @include --max-lg {
+    top: 101px;
+  }
+}
+
 .order-total {
   border: 1px solid #e3e3e3;
   background: #f8f8f8;
@@ -86,7 +141,6 @@
   padding: 16px 24px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
   gap: 8px;
   cursor: pointer;
 
@@ -95,8 +149,13 @@
   }
 
   @include --max-xl {
-    padding: 24px 16px;
+    padding: 12px 16px;
     gap: 8px;
+  }
+
+  @include --max-md {
+    order: -1;
+    padding: 0;
   }
 }
 
@@ -133,8 +192,9 @@
     border-radius: 2px;
   }
 
-  &:has(input:checked)::after {
+  &::after {
     content: '';
+    display: none;
     width: 14px;
     height: 8px;
     margin-top: -3px;
@@ -146,6 +206,22 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) rotate(-45deg);
+  }
+
+  &:has(input:checked)::after {
+    display: block;
+  }
+
+  @include --max-xl {
+    width: 18px;
+    height: 18px;
+    &::after {
+      width: 12px;
+      height: 6px;
+      margin-top: -2px;
+      border-left-width: 3px;
+      border-bottom-width: 3px;
+    }
   }
 }
 
@@ -161,12 +237,25 @@
       color: #f18a16;
     }
   }
+
+  @include --max-xl {
+    font-size: 12px;
+  }
 }
 
 .order-groups {
   display: grid;
   grid-template-columns: auto auto;
   gap: 36px;
+
+  @include --max-xl {
+    gap: 24px;
+  }
+
+  @include --max-xl {
+    grid-template-columns: auto;
+    gap: 36px;
+  }
 }
 
 .order-group_wide {
@@ -180,6 +269,11 @@
   padding: 0;
   align-items: center;
   cursor: pointer;
+
+  @include --max-xl {
+    min-height: 32px;
+    gap: 8px;
+  }
 }
 
 .order-radiobox:has(input:checked) {
@@ -203,8 +297,15 @@
 .order-radiobox__price {
   font-weight: 500;
   position: relative;
+  white-space: nowrap;
+  padding: 0 8px;
+
   &:has(.order-radiobox__price-value:empty) {
     display: none;
+  }
+
+  @include --max-xl {
+    padding: 0 4px;
   }
 }
 
@@ -213,9 +314,16 @@
   width: 28px;
   height: 28px;
   flex-shrink: 0;
+  margin: 4px 0;
   box-sizing: border-box;
   border-radius: 50%;
   border: 1px solid #e4e4e4;
+  align-self: flex-start;
+
+  @include --max-xl {
+    width: 24px;
+    height: 24px;
+  }
 }
 
 .order-radiobox__control input {
@@ -257,12 +365,20 @@
   background: #0699bc;
 }
 
-.order-radiobox__label {
-  font-size: 16px;
-  color: #656565;
+.order-radiobox__content {
   display: block;
   line-height: 18px;
+  font-size: 16px;
   text-wrap: balance;
+
+  @include --max-xl {
+    font-size: 14px;
+    line-height: 16px;
+  }
+}
+
+.order-radiobox__label {
+  color: #656565;
   span {
     font-style: italic;
     color: #bababa;
@@ -276,6 +392,17 @@
   text-transform: uppercase;
   color: #000000;
   font-weight: 700;
+
+  @include --max-xl {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  @include --max-md {
+    line-height: 28px;
+    border-bottom: 1px solid #f3f3f3;
+    margin-bottom: 8px;
+  }
 }
 
 .order-group__desc {
@@ -287,27 +414,31 @@
   &_danger {
     color: #bb0000;
   }
+
+  @include --max-xl {
+    font-size: 12px;
+    line-height: 14px;
+  }
+
+  @include --max-md {
+    margin: 8px 0 12px;
+  }
 }
 
 .order-radioboxes {
   display: flex;
   flex-direction: column;
   gap: 12px;
-
-  &_inline {
-    flex-direction: row;
-    gap: 64px;
-
-    .order-radiobox__label {
-      font-size: 18px;
-    }
-  }
 }
 
 .order-textfields {
   display: flex;
   flex-direction: column;
   gap: 12px;
+
+  @include --max-md {
+    gap: 4px;
+  }
 }
 
 .order-textfield {
@@ -329,6 +460,16 @@
   display: flex;
   align-items: center;
   height: 36px;
+
+  @include --max-xl {
+    font-size: 14px;
+    height: 32px;
+    width: 96px;
+  }
+
+  @include --max-md {
+    height: 36px;
+  }
 }
 
 #msOrder .order-textfield__label .required-star {
@@ -345,8 +486,21 @@
   border: 1px solid #e3e3e3;
   box-sizing: border-box;
   flex-grow: 1;
+  min-width: 0;
+
   &:disabled {
     opacity: 0.4;
+  }
+
+  @include --max-xl {
+    padding: 0 12px;
+    min-height: 32px;
+    font-size: 14px;
+    width: 160px;
+  }
+
+  @include --max-md {
+    min-height: 36px;
   }
 }
 
@@ -365,14 +519,24 @@ textarea.order-textfield__control {
   text-transform: uppercase;
   color: #000000;
   font-weight: 700;
-  // text-align: center;
+
+  @include --max-xl {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
 .order-country__controls {
   display: flex;
-  // justify-content: center;
   align-items: center;
   gap: 64px;
+
+  @include --max-xl {
+    gap: 48px;
+  }
+  @include --max-md {
+    gap: 8px;
+  }
 }
 
 .order-country__control {
@@ -388,16 +552,27 @@ textarea.order-textfield__control {
   &[data-status='active'] .order-country__control-radio::before {
     display: block;
   }
+
+  @include --max-xl {
+    min-height: 32px;
+  }
+
+  @include --max-md {
+    gap: 4px;
+  }
 }
 
 .order-country__control-radio {
   position: relative;
   width: 28px;
   height: 28px;
+  margin: 4px 0;
+  align-self: flex-start;
   flex-shrink: 0;
   box-sizing: border-box;
   border-radius: 50%;
   border: 1px solid #e4e4e4;
+
   &::before {
     content: '';
     display: none;
@@ -412,6 +587,11 @@ textarea.order-textfield__control {
     z-index: 3;
     background: #0699bc;
   }
+
+  @include --max-xl {
+    width: 24px;
+    height: 24px;
+  }
 }
 
 .order-country__control-label {
@@ -420,4 +600,13 @@ textarea.order-textfield__control {
   display: block;
   line-height: 18px;
   text-wrap: balance;
+
+  @include --max-xl {
+    font-size: 16px;
+    line-height: 16px;
+  }
+  @include --max-md {
+    font-size: 14px;
+    line-height: 16px;
+  }
 }
