--- a/src/scss/calc.scss
+++ b/src/scss/calc.scss
@@ -65,7 +65,8 @@
   box-sizing: border-box;
 
   @include --max-lg {
-    width: 20%;
+    width: 100%;
+    text-align: center;
     padding-right: 0;
     font-size: 16px;
     font-weight: bold;
