--- a/src/scss/floating-nav.scss
+++ b/src/scss/floating-nav.scss
@@ -6,7 +6,7 @@
     left: 50%;
     margin-left: calc((var(--container-width) + (var(--container-padding) * 2)) / 2 * -1);
     background-color: rgb(255, 255, 255);
-    box-shadow: 0px 0px 32px 0px rgba(0, 29, 47, 0.58);
+    box-shadow: 0px 0px 32px 0px rgba(0, 29, 47, 0.28);
     top: 70px;
     width: calc((var(--container-width) + (var(--container-padding) * 2)));
     z-index: 150;
@@ -17,6 +17,7 @@
     opacity: 0;
     transform: translateY(-10px);
     transition: 0.3s ease;
+    border-radius: 12px;
     &[data-state='opened'] {
       opacity: 1;
       visibility: visible;
