--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -219,6 +219,11 @@
   position: relative;
   overflow: hidden;
   margin-top: 12px;
+
+  [data-product-gallery-fullscreen] & {
+    min-height: 80px;
+  }
+
   .swiper-slide {
     border: 1px solid #e3e3e3;
     box-sizing: border-box;
@@ -227,15 +232,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    aspect-ratio: 1 / 1;
+    width: calc(20% - 10px);
+
+    [data-product-gallery-fullscreen] & {
+      width: 80px;
+    }
+
     img {
       display: block;
-      max-width: 100%;
-      max-height: 140px;
-      width: auto;
-      height: auto;
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
       user-select: none;
       opacity: 0.6;
     }
+
     &::after {
       content: '';
       position: absolute;
@@ -245,14 +257,17 @@
       bottom: 0;
     }
   }
+
   .swiper-slide:hover {
     img {
       opacity: 1;
     }
   }
+
   .swiper-slide-thumb-active {
     border-color: #0599bb;
     box-shadow: inset 0 0 0 1px #0599bb;
+
     img {
       opacity: 1;
     }
