--- a/src/scss/contacts.scss
+++ b/src/scss/contacts.scss
@@ -432,6 +432,10 @@
   margin-top: 15px;
 }
 
+.contacts-express__description strong {
+  font-weight: 500;
+}
+
 .cdek-widget {
   position: relative;
 }
