--- a/src/scss/search.scss
+++ b/src/scss/search.scss
@@ -77,8 +77,11 @@ body {
   }
 
   .ui-menu {
-    padding-bottom: 45px;
     padding-top: 7px;
+
+    &:has(.mse2-ac-more) {
+      padding-bottom: 45px;
+    }
 
     &.ui-widget.ui-widget-content {
       border: none;
@@ -169,6 +172,80 @@ body {
         border-radius: 2px;
         transform: rotate(45deg) translate(-50%, -50%);
       }
+    }
+  }
+}
+
+.search-page {
+  margin: 12px 0 96px;
+}
+
+.search-page__title {
+  font-size: 30px;
+  text-transform: uppercase;
+  color: #000;
+  line-height: 36px;
+  font-weight: 400;
+  margin: 32px 0;
+
+  @include --max-lg {
+    font-size: 16px;
+    line-height: 20px;
+    margin: 16px 0;
+  }
+}
+
+.search-products {
+  margin-top: 24px;
+}
+
+.search-products .sticky-filter__container {
+  width: calc(100vw - (100vw - var(--container-width)));
+
+  @include --max-2xl {
+    width: calc(100vw - (100vw - var(--container-width)));
+  }
+
+  @include --max-lg {
+    width: calc(100vw - (var(--container-padding) * 2));
+  }
+}
+
+.search-products #mse2_results {
+  margin: 24px 0 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 12px;
+  row-gap: 24px;
+  .mse2_results_nodata {
+    grid-column: span 2 / span 2;
+  }
+  @include --md {
+    gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    > *:nth-child(15) + * {
+      display: none;
+    }
+    .mse2_results_nodata {
+      grid-column: span 3 / span 3;
+    }
+  }
+  @include --lg {
+    grid-template-columns: repeat(4, 1fr);
+    > *:nth-child(15) + * {
+      display: flex;
+    }
+    .mse2_results_nodata {
+      grid-column: span 4 / span 4;
+    }
+  }
+  @include --3xl {
+    grid-template-columns: repeat(5, 1fr);
+    > *:nth-child(15) + * {
+      display: none;
+    }
+    .mse2_results_nodata {
+      grid-column: span 5 / span 5;
     }
   }
 }
