--- a/src/scss/category.scss
+++ b/src/scss/category.scss
@@ -50,6 +50,7 @@
 }
 
 .category-products #mse2_results {
+  margin: 24px 0 0;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 12px;
