--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -25,23 +25,278 @@ body {
   flex-grow: 1;
 }
 
-.page-main {
-  margin: 48px auto 96px;
-  max-width: 1280px;
+.text-page {
+  margin: 32px auto 96px;
+  max-width: 1216px;
+
+  @include --max-md {
+    margin: 16px auto 96px;
+  }
 }
 
-.page-main__title {
+.text-page__title {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
   color: #000;
   font-weight: 400;
   margin: 0 0 32px;
+
+  @include --max-md {
+    font-size: 18px;
+    line-height: 24px;
+    margin-bottom: 16px;
+  }
 }
 
-.page-main__content {
-  max-width: 980px;
-  margin: 0 auto;
+.text-page__content {
+}
+
+.content {
+  font-size: 18px;
+  line-height: 1.5;
+
+  p {
+    margin: 0;
+  }
+
+  * + p {
+    margin-top: 24px;
+  }
+
+  h2 {
+    font-size: 24px;
+    font-weight: 500;
+    margin: 0;
+    line-height: 1.25;
+  }
+
+  * + h2 {
+    margin-top: 48px;
+  }
+
+  h3 {
+    font-size: 20px;
+    font-weight: 500;
+    margin: 0;
+    line-height: 1.25;
+  }
+
+  * + h3 {
+    margin-top: 36px;
+  }
+
+  b,
+  strong {
+    font-weight: 500;
+  }
+
+  * + .content-checklist {
+    margin-top: 24px;
+  }
+
+  a {
+    color: #0699bc;
+    &:hover {
+      color: #f18a16;
+    }
+  }
+
+  table {
+    margin: 32px 0;
+    border-width: 1px;
+    text-indent: 0;
+    border-color: inherit;
+    border-collapse: collapse;
+    th,
+    td {
+      font-size: 16px;
+      padding: 8px 12px;
+    }
+  }
+
+  @include --max-lg {
+    font-size: 16px;
+    * + p {
+      margin-top: 20px;
+    }
+    h2 {
+      font-size: 20px;
+    }
+    * + h2 {
+      margin-top: 36px;
+    }
+    h3 {
+      font-size: 18px;
+    }
+    * + h3 {
+      margin-top: 24px;
+    }
+  }
+  @include --max-md {
+    font-size: 14px;
+    * + p {
+      margin-top: 16px;
+    }
+    h2 {
+      font-size: 16px;
+      padding-bottom: 6px;
+      border-bottom: 1px solid #f3f3f3;
+    }
+    * + h2 {
+      margin-top: 36px;
+    }
+    h3 {
+      font-size: 14px;
+    }
+    * + h3 {
+      margin-top: 24px;
+    }
+    * + .content-attention {
+      margin-top: 24px;
+    }
+    * + .content-cursor {
+      margin-top: 36px;
+    }
+    * + .content-checklist {
+      margin-top: 16px;
+    }
+  }
+}
+
+.content-checklist {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.content-checklist li {
+  position: relative;
+  padding-left: 64px;
+  margin: 16px 0;
+  line-height: 1.25;
+}
+
+.content-checklist li::before {
+  content: '';
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  left: 16px;
+  top: -6px;
+  background: url('../images/check.svg') no-repeat 50% 50%;
+
+  @include --max-md {
+    top: 0;
+  }
+}
+
+.content-highlighted {
+  padding: 24px;
+  line-height: 1.25;
+  border-radius: 12px;
+  background-color: #f8f8f8;
+  border: 1px solid #e3e3e3;
+  box-sizing: border-box;
+}
+
+.content-attention {
+  background-color: rgba(55, 188, 33, 0.30196078431372547);
+  padding: 24px;
+  border-radius: 12px;
+  box-sizing: border-box;
+  overflow: hidden;
+  line-height: 1.25;
+}
+
+.content-cursor {
+  color: #37bc21;
+  padding-left: 64px;
+  position: relative;
+  box-sizing: border-box;
+  overflow: hidden;
+  line-height: 1.25;
+}
+
+.content-cursor::before {
+  content: '';
+  width: 50px;
+  height: 37px;
+  background: url('/files/images/delivery/content-cursor.png') no-repeat 50% 50%;
+  position: absolute;
+  top: 50%;
+  margin-top: -18px;
+  left: 0;
+}
+
+.text-page__content .product-info {
+  @include --md {
+    float: right;
+    margin-left: 32px;
+  }
+}
+
+.product-info {
+  border-radius: 6px;
+  background-color: #ffffff;
+  border: 1px solid #e3e3e3;
+  width: 100%;
+  max-width: 360px;
+
+  @include --max-lg {
+    max-width: 320px;
+  }
+}
+
+.product-info__row {
+  border-bottom: 1px solid #e3e3e3;
+  padding: 0 8px;
+  display: flex;
+  align-items: center;
+
+  &:last-child {
+    border-bottom: 0;
+  }
+}
+
+.product-info__info {
+  flex-grow: 1;
+}
+
+.product-info__image {
+  width: 80px;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+.product-info__title {
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #0699bc;
+  font-weight: 700;
+  line-height: 1.25;
+
+  @include --max-lg {
+    font-size: 12px;
+  }
+}
+
+.product-info__desc {
+  font-size: 14px;
+  color: #8d8d8d;
+  font-weight: 400;
+  line-height: 1.25;
+  margin-top: 4px;
+
+  @include --max-lg {
+    font-size: 12px;
+  }
 }
 
 .container {
@@ -551,5 +806,193 @@ body {
     width: 40px;
     height: 28px;
     font-size: 12px;
+  }
+}
+
+.product-achievements {
+  display: flex;
+  justify-content: space-between;
+  gap: 12px;
+}
+
+.product-achievement {
+  position: relative;
+  box-sizing: border-box;
+  max-width: 320px;
+  width: 33.33%;
+  border: 6px solid #e0eff2;
+  min-height: 150px;
+  border-radius: 6px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  @media (max-width: $breakpoint-medium-max) {
+    border-width: 4px;
+    min-height: 120px;
+  }
+  @media (max-width: $breakpoint-small-max) {
+    width: 50%;
+  }
+}
+
+.product-achievement__title {
+  font-size: 20px;
+  line-height: 1;
+  color: #0699bc;
+  font-weight: 700;
+  position: absolute;
+  left: 10px;
+  top: -16px;
+  padding: 0 8px;
+  background: #fff;
+  text-transform: uppercase;
+  white-space: nowrap;
+  @media (max-width: $breakpoint-medium-max) {
+    font-size: 16px;
+    left: 10px;
+    top: -12px;
+    padding: 0 6px;
+  }
+}
+
+.product-achievement__label {
+  font-size: 72px;
+  line-height: 72px;
+  color: #0699bc;
+  text-transform: uppercase;
+  font-weight: 700;
+  white-space: nowrap;
+  @media (max-width: $breakpoint-medium-max) {
+    font-size: 42px;
+    line-height: 42px;
+  }
+}
+
+.product-achievement__sub {
+  text-transform: lowercase;
+  font-size: 24px;
+  line-height: 1;
+  color: #0699bc;
+  font-weight: 300;
+  white-space: nowrap;
+  @media (max-width: $breakpoint-medium-max) {
+    font-size: 14px;
+  }
+}
+
+.product-achievement_years {
+  .product-achievement__label {
+    letter-spacing: -0.05em;
+  }
+  .product-achievement__sub {
+    letter-spacing: -0.04em;
+  }
+}
+
+.product-achievement_catalog {
+  @media (max-width: $breakpoint-small-max) {
+    display: none;
+  }
+  .product-achievement__label {
+    font-size: 60px;
+    letter-spacing: -0.055em;
+    @media (max-width: $breakpoint-medium-max) {
+      font-size: 42px;
+    }
+  }
+}
+
+.product-achievement_orders {
+  .product-achievement__label {
+    letter-spacing: -0.0125em;
+  }
+  .product-achievement__sub {
+    letter-spacing: -0.032em;
+  }
+}
+
+.fixed-catalog {
+  position: fixed;
+  z-index: 100;
+  border: none;
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 1;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #000000;
+  font-weight: 400;
+  height: 44px;
+  width: 120px;
+  border-radius: 8px;
+  filter: drop-shadow(0 0 4px rgba(0, 29, 47, 0.33));
+  background-color: #efde00;
+  text-transform: uppercase;
+  padding: 0 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+  box-sizing: border-box;
+  left: var(--container-padding);
+  bottom: calc(var(--container-padding) * 2);
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility 0.3s ease, opacity 0.3s ease;
+  .floating-elements & {
+    opacity: 1;
+    visibility: visible;
+  }
+  &:hover {
+    color: #000000;
+    filter: drop-shadow(0 0 4px rgba(0, 29, 47, 0.5));
+    background-image: linear-gradient(37deg, #efce12 0%, #edd30d 100%);
+  }
+
+  @include --lg {
+    display: none;
+  }
+}
+
+.scrolltop {
+  position: fixed;
+  z-index: 100;
+  border: none;
+  text-decoration: none;
+  font-size: 10px;
+  line-height: 1;
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: 400;
+  flex-direction: column;
+  height: 44px;
+  width: 44px;
+  border-radius: 8px;
+  background-color: #0699bc;
+  text-transform: uppercase;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2px;
+  box-sizing: border-box;
+  left: calc(var(--container-padding) * 2 + 120px);
+  bottom: calc(var(--container-padding) * 2);
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility 0.3s ease, opacity 0.3s ease;
+  .floating-elements & {
+    opacity: 1;
+    visibility: visible;
+  }
+  &:hover {
+    color: #000000;
+    filter: drop-shadow(0 0 4px rgba(0, 29, 47, 0.5));
+    background-image: linear-gradient(37deg, #efce12 0%, #edd30d 100%);
+  }
+
+  @include --lg {
+    display: none;
   }
 }
