--- a/src/scss/category.scss
+++ b/src/scss/category.scss
@@ -55,14 +55,26 @@
   grid-template-columns: repeat(2, 1fr);
   column-gap: 12px;
   row-gap: 24px;
+  .mse2_results_nodata {
+    grid-column: span 2 / span 2;
+  }
   @include --md {
     gap: 20px;
     grid-template-columns: repeat(3, 1fr);
+    .mse2_results_nodata {
+      grid-column: span 3 / span 3;
+    }
   }
   @include --xl {
     grid-template-columns: repeat(3, 1fr);
+    .mse2_results_nodata {
+      grid-column: span 3 / span 3;
+    }
   }
   @include --3xl {
     grid-template-columns: repeat(4, 1fr);
+    .mse2_results_nodata {
+      grid-column: span 4 / span 4;
+    }
   }
 }
