--- a/src/scss/modals.scss
+++ b/src/scss/modals.scss
@@ -26,6 +26,10 @@
   width: 640px;
 }
 
+.modal-confirm .modal__container {
+  width: 480px;
+}
+
 .modal-buy-in-click .modal__container {
   width: 960px;
 
