--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -338,8 +338,6 @@ body {
   font-size: 16px;
   letter-spacing: 1px; //
   text-transform: uppercase; //
-  width: 320px;
-  max-width: 100%;
   @include --hover {
     background: #eed20e;
     color: #000;
@@ -410,7 +408,7 @@ body {
 }
 
 .button-outline {
-  background: transparent;
+  background: #fff;
   border: 2px solid #e3e3e3;
   color: #333;
   display: flex;
@@ -420,6 +418,7 @@ body {
   text-decoration: none;
   height: 44px;
   padding: 0 24px;
+  white-space: nowrap;
   border-radius: 4px;
   box-sizing: border-box;
   cursor: pointer;
@@ -457,21 +456,32 @@ body {
   border-radius: 4px;
   font-weight: 500;
   background-color: #fff;
-  border: 2px solid #878787;
+  // border: 2px solid #878787;
+  border: 2px solid #e3e3e3;
   box-sizing: border-box;
   display: flex;
+  gap: 4px;
   align-items: center;
   justify-content: center;
   font-size: 14px;
   letter-spacing: 1px;
   text-transform: uppercase;
-  color: #878787;
+  // color: #878787;
+  color: #333;
   text-align: center;
   text-decoration: none;
 
-  &:hover {
-    background: #878787;
-    color: #fff;
+  &:disabled {
+    background-color: #fbfbfb;
+    cursor: default;
+    color: #c3c3c3;
+  }
+
+  &:not(:disabled):hover {
+    // background: #878787;
+    // color: #fff;
+    background: #e3e3e3;
+    color: #000;
   }
 
   @include --max-md {
@@ -498,7 +508,14 @@ body {
   text-align: center;
   text-decoration: none;
 
-  &:hover {
+  &:disabled {
+    background-color: #f9f5b9;
+    border-color: #f9f5b9;
+    cursor: default;
+    color: #939393;
+  }
+
+  &:not(:disabled):hover {
     background-image: linear-gradient(37deg, #ffed66, #ffde2c);
     color: #000;
   }
@@ -1230,5 +1247,75 @@ body {
 
   @include --max-xl {
     font-size: 12px;
+  }
+}
+
+.pagination {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 32px 0;
+  padding: 0;
+  list-style: none;
+  body #pdopage & {
+    margin: 32px 0;
+  }
+  .page-item {
+  }
+  .page-item.disabled .page-link {
+    color: #bababa;
+  }
+  .page-item.active .page-link {
+    font-weight: 700;
+    color: #0699bc;
+  }
+  .page-link {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 24px;
+    min-width: 24px;
+    text-decoration: none;
+    font-size: 16px;
+    line-height: 1;
+    color: #000;
+    &:hover {
+      color: #f18a16;
+    }
+  }
+}
+
+.modal-confirmation {
+}
+
+.modal-confirmation__header {
+  line-height: 1.333;
+  font-size: 18px;
+  a {
+    text-decoration: underline;
+    color: inherit;
+    display: inline-block;
+    &:hover {
+      color: #f18a16;
+    }
+  }
+
+  @include --max-md {
+    text-align: center;
+  }
+}
+
+.modal-confirmation__footer {
+  display: grid;
+  grid-template-columns: minmax(min-content, 1fr) minmax(min-content, 1fr);
+  gap: 16px;
+  margin-top: 24px;
+
+  @include --max-md {
+    grid-template-columns: 1fr;
+    margin-top: 16px;
+    gap: 12px;
   }
 }
